--- a/.github/workflows/main_api-led-controller.yml
+++ b/.github/workflows/main_api-led-controller.yml
@@ -21,10 +21,9 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: npm install, build, and test
+      - name: run source
         run: |
-          npm install
-          npm run build --if-present
+          ssh -o StrictHostKeyChecking=no xuanloc@20.2.116.72 'bash /sources/backend/deploy.sh'
           
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
