--- a/.github/workflows/main_api-led-controller.yml
+++ b/.github/workflows/main_api-led-controller.yml
@@ -20,6 +20,11 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
+      
+      - name: Setup SSH
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.AZURE_VM_SSH_KEY }}
 
       - name: Deploy to Azure VM
         env:
