--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,17 +18,26 @@ jobs:
         with:
           node-version: '20.x'
       
-      - name: Deploy using ssh
-        uses: appleboy/ssh-action@master
+      - name: Setup SSH
+        uses: webfactory/ssh-agent@v0.5.3
         with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: 22
-          script: |
-            cd /sources/led_controller_be/
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          
+      - name: Deploy to Azure VM
+        env:
+          HOST: ${{ secrets.HOST }}  # Replace with your Azure VM's IP
+          USER: ${{ secrets.USERNAME }}     # Replace with your SSH username
+        run: |
+          ssh -o StrictHostKeyChecking=no $USER@$HOST << 'EOF'
+            # Navigate to the project directory
+            cd /sources/led_controller_be
+  
+            # Pull the latest changes
             git pull origin main
-            git status
-            npm install 
-            npm run build
+  
+            # Install dependencies (example for a Node.js project)
+            npm install
+  
+            # Restart the application (example for a PM2 managed Node.js app)      
             pm2 restart thesis-api
+          EOF
