--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,38 @@
-deploy_dev:
-  stage: deploy
-  before_script:
-    - apk add openssh-client
-    - eval $(ssh-agent -s)
-    - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
-    - mkdir -p ~/.ssh
-    - chmod 700 ~/.ssh
-  script:
-    - ssh -o StrictHostKeyChecking=no $USERNAME@$HOST "git clone https://github.com/dinkmsd/led_controller_be.git || true"
-    - ssh -o StrictHostKeyChecking=no $USERNAME@$HOST "cd led_controller_be && chmod +x ./before-deploy.sh && ./before-deploy.sh"
-    - ssh -o StrictHostKeyChecking=no $USERNAME@$HOST "cd led_controller_be && chmod +x ./deploy.sh && ./deploy.sh"
+name: Deploy
+
+on:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Node.js version
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20.x'
+      
+      - name: Setup SSH
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          
+      deploy_dev:
+        stage: deploy
+        before_script:
+          - apk add openssh-client
+          - eval $(ssh-agent -s)
+          - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
+          - mkdir -p ~/.ssh
+          - chmod 700 ~/.ssh
+        script:
+          - ssh -o StrictHostKeyChecking=no $USER_NAME@$EC2_IPADDRESS "git clone https://oauth2:glpat-Au1UqsQMzytVL2Y2WQ9L@gitlab.tego.global/bcms-outsource/vivaleisure/tegoproject058-swimschool-serverless.git || true"
+          - ssh -o StrictHostKeyChecking=no $USER_NAME@$EC2_IPADDRESS "cd tegoproject058-swimschool-serverless && chmod +x ./before-deploy.sh && ./before-deploy.sh"
+          - ssh -o StrictHostKeyChecking=no $USER_NAME@$EC2_IPADDRESS "cd tegoproject058-swimschool-serverless/apis && chmod +x ./deploy.sh && ./deploy.sh"
+          - ssh -o StrictHostKeyChecking=no $USER_NAME@$EC2_IPADDRESS "cd tegoproject058-swimschool-serverless/event-tracker && chmod +x ./deploy.sh && ./deploy.sh"
