--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,20 +19,33 @@ jobs:
           node-version: '20.x'
 
       - name: Setup SSH
-        run: |
-          eval $(ssh-agent -s)
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" | tr -d '\r' | ssh-add -
-          mkdir -p ~/.ssh
-          chmod 700 ~/.ssh
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      - name: Clone Repository on Remote Server
+      - name: Deploy to Azure VM
+        env:
+          HOST: ${{ secrets.HOST }} # Replace with your Azure VM's IP
+          USER: ${{ secrets.USERNAME }} # Replace with your SSH username
         run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.USERNAME }}@${{ secrets.HOST }} "git clone https://github.com/dinkmsd/led_controller_be.git || true"
+          ssh -o StrictHostKeyChecking=no $USER@$HOST << 'EOF'
 
-      - name: Run before-deploy.sh on Remote Server
-        run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.USERNAME }}@${{ secrets.HOST }} "cd led_controller_be && chmod +x ./before-deploy.sh && ./before-deploy.sh"
+            # Navigate to the project directory
+            cd /var/www/led_controller_be
+            
+            echo "Kill all the running PM2 actions"
+            pm2 kill
+            
+            # Pull the latest changes
+            echo "Update app from Git"
+            git checkout main  && git pull origin main
 
-      - name: Run deploy.sh on Remote Server
-        run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.USERNAME }}@${{ secrets.HOST }} "cd led_controller_be && chmod +x ./deploy.sh && ./deploy.sh"
+            # Install dependencies (example for a Node.js project)
+            npm install
+
+            echo "Build code"
+            npm run build
+
+            echo "Restart the application"      
+            pm2 restart thesis-api
+          EOF
