--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/websockets": "^10.3.8",
     "bcrypt": "^5.1.1",
-    "cache-manager": "^5.5.2",
-    "cache-manager-redis-store": "^3.0.1",
+    "cache-manager": "^5.3.2",
+    "cache-manager-redis-yet": "^4.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
+    "firebase-admin": "^12.1.1",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
@@ -46,6 +47,7 @@
     "nestjs-redis": "^1.3.3",
     "passport-local": "^1.0.0",
     "ps-logger": "^1.0.8",
+    "ramda": "^0.30.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
